--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,7 +2,7 @@ spring.application.name=shoppingweb
 server.port=8080
 
 #database
-spring.datasource.url=jdbc:mysql://localhost:3306/clothing_ecommerceuseSSL=false?&serverTimezone=UTC
+spring.datasource.url=jdbc:mysql://localhost:3306/clothing_ecommerce?useSSL=false&serverTimezone=UTC
 spring.datasource.username=root
 spring.datasource.password=root
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
